ended training with reactive pattern, completed most of the unit testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=category_app
+server.port=8085
+spring.kafka.consumer.group-id=categories
+spring.kafka.bootstrap-servers=localhost:9092
